--- a/app/views/game_templates/play_rock.html.erb
+++ b/app/views/game_templates/play_rock.html.erb
@@ -1,3 +1,10 @@
+
+<ul>
+
+  <li><a href="/rock">Play Rock</a></li>
+  <li><a href="/paper">Play Paper</a></li>
+  <li><a href="/scissors">Play Scissors</a></li>
+
 </ul>
   
   <h2>
